Updated link markup to be more specific.

--- a/WebContents/style.css
+++ b/WebContents/style.css
@@ -60,7 +60,7 @@ li {
 	margin-right: auto;
 }
 	
-a {
+li a {
 	text-align:center;
 	color:#FFFFFF;
 	display:block;
@@ -113,7 +113,7 @@ a {
 		width:15%;
 	}
 	
-	a {
+	li a {
 		text-align:right;
 		color:#FFFFFF;
 		display:block;
