--- a/WebContents/style.css
+++ b/WebContents/style.css
@@ -10,6 +10,10 @@ h1 {
 	font-family: 'Oswald', sans-serif;
 }
 
+h2 {
+	font-family: 'Oswald', sans-serif;
+}
+
 #nav-bar {
 	font-family: 'Oswald', sans-serif;
 	background-color:#000000;
